[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,20 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <script>{
+        alert(Welcome!!!)};
+        </script>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
+        <hr/>
+        <h4> Heading one </h4>
         <div class="center text-big bold">
+            <h2> heading 2 </h2>
             Hi! It's Vejay here!!!
         </div>
+        This button <button id = "counter"> Click me!</button> has been clicked <span id="count">0</span> times.
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
