--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,9 @@
             <h2> heading 2 </h2>
             Hi! It's Vejay here!!!
         </div>
+        <div class = "footer">
         This button <button id = "counter"> Click me!</button> has been clicked <span id="count">0</span> times.
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
