[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
         alert(Welcome!!!)};
         </script>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <hr/>
