--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <script>{
-        alert(Welcome!!!)};
+        alert(Welcome!!!))};
         </script>
         <div class="center">
             <img id='madi' src="/ui/madi.png" class="img-medium"/>
