--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,9 @@
         <div class = "footer">
              This button <button id = "counter"> Click me!</button> has been clicked <span id="count">0</span> times.
         </div>
+        <script>
+            alert('HI there!!!');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
